# toxprot25

./: .gitignore  README.md  pyproject.toml
data/interim/: toxprot_2005.csv  toxprot_2005.fasta  toxprot_2005.tsv  toxprot_2005_metadata.json  toxprot_2015.csv  toxprot_2015_metadata.json  toxprot_2017.csv  toxprot_2017.fasta  toxprot_2017_metadata.json  toxprot_2025.csv  toxprot_2025_metadata.json
data/processed/: toxprot_2017.csv  toxprot_2025.csv
data/raw/: habitat_detailed.json  marine_terrestrial.json  ptm_keywords.tsv  ptmlist.txt
docs/: analysis_summary.md  data_processing.md  notes.md  protspace.md  todo.md  uniprot_releases.md
figures/go_terms/: go_terms_full_comparison.csv  go_terms_summary.csv
figures/protspace/: silhouette_comparison.csv
figures/ptm/: ptm_count_distribution_data.csv  ptm_summary_statistics.csv  ptm_type_comparison_data.csv
notebook/: analysis_statistics.ipynb  clean_data.ipynb  kim_vs_sprot2017.ipynb  protfam_figures.ipynb  taxa_plots.ipynb
scripts/: convert_silhouettes.py
src/: __init__.py  analyze_go_terms.py  cli.py  config.py  generate_family_renaming_report.py  parse_sprot_dat.py  plot_protein_evidence_sankey.py  plotly_sankey_plot.py  taxa_plots_script.py  visualize_habitat_protein_changes.py
src/analysis/: __init__.py  analyze_definitions.py  analyze_go_terms.py  analyze_habitat.py  analyze_protein_evidence.py  analyze_protein_families.py  analyze_ptm.py  analyze_summary.py  (+9 more)
tests/: conftest.py  test_clean_data.py  test_download_uniprot_releases.py  test_parse_sprot_dat.py  test_parse_sprot_xml.py  test_pipeline.py
(+94 files in other folders)
