[project]
name = "toxprot25"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kaleido>=0.2.1,!=0.2.1.post1",
    "matplotlib>=3.10.1",
    "matplotlib-venn>=1.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "seaborn>=0.13.2",
    "taxopy>=0.14.0",
    "tqdm>=4.67.1",
]
