[project]
name = "toxprot25"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "click>=8.1.0",
    "jupyter>=1.1.1",
    "kaleido>=0.2.1",
    "matplotlib>=3.10.1",
    "matplotlib-venn>=1.1.2",
    "obonet>=1.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=10.0.0",
    "plotly>=5.18.0",
    "protspace[frontend]>=2.3.0",
    "seaborn>=0.13.2",
    "taxopy>=0.14.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.4.0",
]

[project.scripts]
toxprot = "src.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
